# avatar-mockup

./: CMakeLists.txt  README.md  simple.sh
src/: .simple-tuner.cpp.swp  CMakeLists.txt  meta-smoother-discrete.cpp  meta-smoother.cpp  simple-tuner.cpp  tuning_playground.hpp
